--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -214,19 +214,27 @@
    "source": [
     "def correlation():\n",
     "    for index, column in enumerate(starts_with):\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
     "        selected_columns = [col for col in data.columns if col.startswith(column) or col == 'pm2_5']\n",
-    "        sns.heatmap(data[selected_columns].corr(), annot=True, fmt='.2f', cmap='viridis', ax=ax)\n",
-    "        plt.tight_layout()\n",
-    "        plt.show()\n",
+    "        if len(selected_columns) > 1:\n",
+    "            fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "            sns.heatmap(data[selected_columns].corr(), annot=True, fmt='.2f', cmap='viridis', ax=ax)\n",
+    "            plt.tight_layout()\n",
+    "            plt.show()\n",
+    "        \n",
+    "def drop_high_corelated_columns(dataframe):\n",
+    "    matrix = dataframe.corr(numeric_only=True)\n",
+    "    upper = matrix.where(np.triu(np.ones(matrix.shape), k=1).astype(np.bool_))\n",
+    "    to_drop = [column for column in upper.columns if any(upper[column] >= 0.9)]\n",
+    "    return dataframe.drop(to_drop, axis=1)\n",
     "\n",
     "\n",
     "final_ids = test['id']\n",
-    "data.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude', 'sulphurdioxide_so2_column_number_density_15km'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude', 'sulphurdioxide_so2_column_number_density_15km'], inplace=True)\n",
     "starts_with = data.columns.str.split('_', expand=True).levels[0].to_frame()\n",
     "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
+    "data, test = drop_high_corelated_columns(data), drop_high_corelated_columns(test)\n",
+    "data.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude'], inplace=True)\n",
     "\n",
     "correlation()"
    ],
@@ -246,39 +254,6 @@
     "collapsed": false
    },
    "id": "ab3216061cba4b3a"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Wykresy przedstawiające ilość NaN w danej kolumnie w zależności od przyjętej jednostki czasu"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "fe2fc5c33fc856fe"
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "def plot_nans_based_on(date_unit='day'):\n",
-    "    for index, column_group in enumerate(starts_with):\n",
-    "        similar_columns = [el for el in data.columns if el.startswith(column_group)]\n",
-    "        fig, ax = plt.subplots(nrows=int(np.ceil(len(similar_columns) / 4)), ncols=4, figsize=(20, 20))\n",
-    "        for j, column in enumerate(similar_columns):\n",
-    "            x_cord, y_cord = divmod(j, 4)\n",
-    "            nans = data[[column, date_unit]].groupby(date_unit).apply(lambda x: x.isna().sum())\n",
-    "            nans.plot(kind='bar', x=date_unit, y=column, ax=ax[x_cord][y_cord])\n",
-    "        plt.show()\n",
-    "\n",
-    "\n",
-    "plot_nans_based_on()"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "6d6253f26d721fb",
-   "outputs": [],
-   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -338,16 +313,22 @@
   {
    "cell_type": "code",
    "source": [
+    "from sympy import divisors\n",
+    "\n",
     "def plot_boxplots():\n",
     "    for index, column_group in enumerate(starts_with):\n",
     "        similar_columns = [col for col in data.columns if col.startswith(column_group)]\n",
-    "        rows = int(np.ceil(len(similar_columns) / 4))\n",
-    "        if rows >= 1:\n",
-    "            fig, ax = plt.subplots(nrows=rows, ncols=4, figsize=(20, 20))\n",
-    "            fig.suptitle(column_group, fontsize=15)\n",
+    "        if len(similar_columns) > 1:\n",
+    "            divs = divisors(len(similar_columns))\n",
+    "            if len(divs) % 2 == 0:\n",
+    "                rows, cols = divs[(len(divs) // 2) - 1], divs[len(divs) // 2]\n",
+    "            else:\n",
+    "                rows, cols = divs[len(divs) // 2], divs[len(divs) // 2]\n",
+    "            fig, ax = plt.subplots(nrows=rows, ncols=cols, figsize=(40, 30), squeeze=False)\n",
+    "            fig.suptitle(column_group, fontsize=25)\n",
     "            for j, column in enumerate(similar_columns):\n",
-    "                x_cord, y_cord = divmod(j, 4)\n",
-    "                data[column].plot(kind='box', ax=ax[x_cord][y_cord])\n",
+    "                x_cord, y_cord = divmod(j, cols)\n",
+    "                data[column].plot(kind='box', ax=ax[x_cord][y_cord], fontsize=15)\n",
     "            plt.show()\n",
     "\n",
     "\n",
@@ -375,16 +356,19 @@
    "source": [
     "from scipy.stats import zscore\n",
     "\n",
-    "def del_big_outliers(dataframe, column):\n",
-    "    vec, indexes = zscore(dataframe[column]), []\n",
-    "    for index in range(len(vec)):\n",
-    "        if -3 <= vec[index] >= 3:\n",
-    "            indexes.append(index)\n",
-    "    dataframe.drop(index=indexes, inplace=True)\n",
+    "def del_outliers(dataframe):\n",
+    "    vertical_columns = ['sulphurdioxide_so2_column_number_density', 'carbonmonoxide_co_column_number_density', 'nitrogendioxide_no2_column_number_density', 'nitrogendioxide_stratospheric_no2_column_number_density']\n",
+    "    for index, column in enumerate(vertical_columns[0:1]):\n",
+    "        vec, indexes = zscore(dataframe[column]), []\n",
+    "        for j in range(len(vec)):\n",
+    "            if -5 <= vec[j] >= 5:\n",
+    "                indexes.append(j)\n",
+    "        dataframe.drop(index=indexes, inplace=True)\n",
+    "        dataframe.reset_index(drop=True, inplace=True)\n",
     "    return dataframe\n",
     "\n",
     "\n",
-    "# data = del_big_outliers(data, 'sulphurdioxide_so2_column_number_density')\n",
+    "data = del_outliers(data)\n",
     "\n",
     "data.info()"
    ],
@@ -438,11 +422,11 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "# k = 30\n",
-    "# selector = select_best_features(X, y, k)\n",
-    "# X, test = selector.transform(X), selector.transform(test)\n",
-    "# \n",
-    "# plot_selection_scores()"
+    "k = 20\n",
+    "selector = select_best_features(X, y, k)\n",
+    "X, test = selector.transform(X), selector.transform(test)\n",
+    "\n",
+    "plot_selection_scores(selector, k)"
    ],
    "metadata": {
     "collapsed": false
@@ -519,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=4)",
+   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)",
    "metadata": {
     "collapsed": false
    },
@@ -572,7 +556,7 @@
    "cell_type": "code",
    "source": [
     "def give_the_best(clf):\n",
-    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=3, verbose=1)\n",
+    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=5, verbose=10)\n",
     "    gs.fit(X_train, y_train)\n",
     "    return gs.best_estimator_\n",
     "\n",
@@ -596,13 +580,13 @@
    "source": [
     "params = {\n",
     "    'n_estimators': [750],\n",
-    "    'max_depth': np.arange(4, 7),\n",
+    "    'max_depth': np.arange(7, 11),\n",
     "    'bootstrap': [True],\n",
     "    'n_jobs': [-1],\n",
     "    'random_state': [5],\n",
     "    'warm_start': [True],\n",
     "    'oob_score': [True],\n",
-    "    'ccp_alpha': np.linspace(0.001, 0.05, 7),\n",
+    "    'ccp_alpha': np.linspace(0.001, 0.01, 10)\n",
     "}\n",
     "\n",
     "rf = give_the_best(RandomForestRegressor())\n",
@@ -719,8 +703,8 @@
     "    lr=0.01, \n",
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
-    "    weight_decay=1e-5,\n",
-    "    amsgrad=False, \n",
+    "    weight_decay=1e-4,\n",
+    "    amsgrad=True, \n",
     "    fused=True\n",
     ")"
    ],
@@ -753,20 +737,39 @@
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
     "dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
+    "epoch_losses = [{'epoch': i, 'rmse': 0} for i in range(num_epochs)]\n",
     "\n",
     "for epoch in range(num_epochs):\n",
+    "    epoch_loss = 0\n",
     "    for batch_idx, batch in enumerate(dataset):\n",
     "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
     "        pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
     "        loss = loss_fn(pred.squeeze(), targets)\n",
+    "        epoch_loss += loss.item()\n",
     "        loss.backward()\n",
-    "        optimizer.step()"
+    "        optimizer.step()\n",
+    "    epoch_losses[epoch].update({'loss': np.sqrt(epoch_loss / len(dataset))})\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}] RMSE: {np.sqrt(epoch_loss / len(dataset)):.4f}')"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "ee01653bc24ee293",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Jakość sieci neuronowej",
+   "id": "af467d14c745b2a4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "sns.lineplot(data=pd.DataFrame(epoch_losses), x='epoch', y='loss')",
+   "id": "a4dc6621d5974fe5",
    "outputs": [],
    "execution_count": null
   },
@@ -792,6 +795,26 @@
     "collapsed": false
    },
    "id": "f4907fe921715dfa",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Parametry modelu",
+   "id": "d509b50d8736fc70"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "print(\"Parametry modelu:\")\n",
+    "for param_tensor in model.state_dict():\n",
+    "    print(param_tensor, \"\\t\", model.state_dict()[param_tensor].size())\n",
+    "    \n",
+    "torch.save(model.state_dict(), 'model.pt')"
+   ],
+   "id": "c3a1775f64035a1a",
    "outputs": [],
    "execution_count": null
   },
@@ -832,22 +855,6 @@
     "collapsed": false
    },
    "id": "d2128d77bca7e777"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "data[[col for col in data.columns if 'sensor_azimuth_angle' in col]].describe()",
-   "id": "58599bb53dd71bce",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "data.info()",
-   "id": "7136e54a42736c67",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
