--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -358,7 +358,7 @@
     "\n",
     "def del_outliers(dataframe):\n",
     "    vertical_columns = ['sulphurdioxide_so2_column_number_density', 'carbonmonoxide_co_column_number_density', 'nitrogendioxide_no2_column_number_density', 'nitrogendioxide_stratospheric_no2_column_number_density']\n",
-    "    for index, column in enumerate(vertical_columns[0:1]):\n",
+    "    for index, column in enumerate(vertical_columns):\n",
     "        vec, indexes = zscore(dataframe[column]), []\n",
     "        for j in range(len(vec)):\n",
     "            if -5 <= vec[j] >= 5:\n",
@@ -422,7 +422,7 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 20\n",
+    "k = 21\n",
     "selector = select_best_features(X, y, k)\n",
     "X, test = selector.transform(X), selector.transform(test)\n",
     "\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)",
+   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=4)",
    "metadata": {
     "collapsed": false
    },
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import root_mean_squared_error"
    ],
@@ -556,7 +556,7 @@
    "cell_type": "code",
    "source": [
     "def give_the_best(clf):\n",
-    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=5, verbose=10)\n",
+    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=5)\n",
     "    gs.fit(X_train, y_train)\n",
     "    return gs.best_estimator_\n",
     "\n",
@@ -571,28 +571,30 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### <center>Regresja przy użyciu lasu</center>",
+   "source": "### <center>Regresja przy użyciu MLP</center>",
    "id": "cc72c66908bb5e08"
   },
   {
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "params = {\n",
-    "    'n_estimators': [750],\n",
-    "    'max_depth': np.arange(7, 11),\n",
-    "    'bootstrap': [True],\n",
-    "    'n_jobs': [-1],\n",
-    "    'random_state': [5],\n",
-    "    'warm_start': [True],\n",
-    "    'oob_score': [True],\n",
-    "    'ccp_alpha': np.linspace(0.001, 0.01, 10)\n",
-    "}\n",
-    "\n",
-    "rf = give_the_best(RandomForestRegressor())\n",
-    "save_to_csv(rf.predict(test), 'rf.csv')\n",
-    "print('Parametry lasu: ', rf.get_params())\n",
-    "print('RMSE: ', root_mean_squared_error(y_test, rf.predict(X_test)))"
+    "# params = {\n",
+    "#     'hidden_layer_sizes': [(99, 141, 75)],\n",
+    "#     'activation': ['relu'],\n",
+    "#     'solver': ['adam'],\n",
+    "#     'max_iter': [1000],\n",
+    "#     'alpha': np.linspace(0.0001, 0.001, 10),\n",
+    "#     'batch_size': [64, 128, 256],\n",
+    "#     'learning_rate_init': np.linspace(0.001, 0.01, 10),\n",
+    "#     'warm_start': [True],\n",
+    "#     'early_stopping': [True],\n",
+    "#     'validation_fraction': [0.1]\n",
+    "# }\n",
+    "# \n",
+    "# mlp = give_the_best(MLPRegressor())\n",
+    "# save_to_csv(mlp.predict(test), 'mlp.csv')\n",
+    "# print('Parametry MLP: ', mlp.get_params())\n",
+    "# print('RMSE: ', root_mean_squared_error(y_test, mlp.predict(X_test)))"
    ],
    "id": "ed5f063582c3c0e2",
    "outputs": [],
@@ -601,7 +603,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## <center>PyTorch</center>",
+   "source": "### <center>PyTorch</center>",
    "id": "d8bd09cb2fae5106"
   },
   {
@@ -678,33 +680,35 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 104),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(p=0.25),\n",
-    "            nn.Linear(104, 200),\n",
+    "            nn.Linear(X_train_tensor.shape[1], 101),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(200, 124),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(124, 145),\n",
-    "            nn.Dropout(p=0.1),\n",
+    "            nn.Linear(101, 141),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(145, 1),\n",
+    "            nn.Linear(141, 124),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(124, 77),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(77, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
     "        return self.layers(x)\n",
+    "    \n",
+    "def RMSELoss(y_true, y_pred):\n",
+    "    return torch.sqrt(torch.mean((y_true - y_pred) ** 2))\n",
+    "\n",
     "\n",
     "model = Net().to(device=device)\n",
-    "loss_fn = nn.MSELoss()\n",
+    "criterion = RMSELoss\n",
     "optimizer = optim.Adam(\n",
     "    model.parameters(), \n",
-    "    lr=0.01, \n",
+    "    lr=0.001, \n",
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-08, \n",
-    "    weight_decay=1e-4,\n",
-    "    amsgrad=True, \n",
+    "    weight_decay=1e-6,\n",
+    "    amsgrad=False, \n",
     "    fused=True\n",
     ")"
    ],
@@ -730,6 +734,7 @@
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
+    "\n",
     "model.train()\n",
     "\n",
     "batch_size = 64\n",
@@ -745,12 +750,12 @@
     "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
     "        pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
-    "        loss = loss_fn(pred.squeeze(), targets)\n",
+    "        loss = criterion(targets, pred.squeeze())\n",
     "        epoch_loss += loss.item()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    epoch_losses[epoch].update({'loss': np.sqrt(epoch_loss / len(dataset))})\n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}] RMSE: {np.sqrt(epoch_loss / len(dataset)):.4f}')"
+    "    epoch_losses[epoch].update({'rmse': epoch_loss / len(dataset)})\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}] RMSE: {epoch_loss / len(dataset):.4f}')"
    ],
    "metadata": {
     "collapsed": false
@@ -768,7 +773,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.lineplot(data=pd.DataFrame(epoch_losses), x='epoch', y='loss')",
+   "source": "sns.lineplot(data=pd.DataFrame(epoch_losses), x='epoch', y='rmse')",
    "id": "a4dc6621d5974fe5",
    "outputs": [],
    "execution_count": null
@@ -788,8 +793,8 @@
     "\n",
     "with torch.no_grad():\n",
     "    pred = model(X_test_tensor)\n",
-    "    loss = loss_fn(pred.squeeze(), y_test_tensor)\n",
-    "    print(f'RMSE: {np.sqrt(loss.item()):.4f}')"
+    "    loss = criterion(y_test_tensor, pred.squeeze())\n",
+    "    print(f'RMSE: {loss.item():.4f}')"
    ],
    "metadata": {
     "collapsed": false
