--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -221,7 +221,7 @@
     "            plt.tight_layout()\n",
     "            plt.show()\n",
     "        \n",
-    "def drop_high_corelated_columns(dataframe):\n",
+    "def drop_high_correlated_columns(dataframe):\n",
     "    matrix = dataframe.corr(numeric_only=True)\n",
     "    upper = matrix.where(np.triu(np.ones(matrix.shape), k=1).astype(np.bool_))\n",
     "    to_drop = [column for column in upper.columns if any(upper[column] >= 0.9)]\n",
@@ -232,9 +232,9 @@
     "starts_with = data.columns.str.split('_', expand=True).levels[0].to_frame()\n",
     "starts_with.drop(['month', 'day', 'hour', 'pm2'], inplace=True)\n",
     "starts_with = starts_with[0].tolist()\n",
-    "data, test = drop_high_corelated_columns(data), drop_high_corelated_columns(test)\n",
-    "data.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude'], inplace=True)\n",
-    "test.drop(columns=['id', 'city', 'country', 'site_id', 'date', 'site_latitude', 'site_longitude'], inplace=True)\n",
+    "data, test = drop_high_correlated_columns(data), drop_high_correlated_columns(test)\n",
+    "data.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
+    "test.drop(columns=['id', 'city', 'country', 'site_id', 'date'], inplace=True)\n",
     "\n",
     "correlation()"
    ],
@@ -289,7 +289,7 @@
     "    return dataframe\n",
     "\n",
     "\n",
-    "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
+    "imputers = [KNNImputer(n_neighbors=5, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)"
    ],
@@ -361,7 +361,7 @@
     "    for index, column in enumerate(vertical_columns):\n",
     "        vec, indexes = zscore(dataframe[column]), []\n",
     "        for j in range(len(vec)):\n",
-    "            if -5 <= vec[j] >= 5:\n",
+    "            if -6 <= vec[j] >= 6:\n",
     "                indexes.append(j)\n",
     "        dataframe.drop(index=indexes, inplace=True)\n",
     "        dataframe.reset_index(drop=True, inplace=True)\n",
@@ -381,9 +381,7 @@
   },
   {
    "cell_type": "code",
-   "source": [
-    "data.head()"
-   ],
+   "source": "data.head()",
    "metadata": {
     "collapsed": false
    },
@@ -404,15 +402,15 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.feature_selection import SelectKBest, mutual_info_regression\n",
+    "from sklearn.feature_selection import SelectKBest, RFE, mutual_info_regression, f_regression\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "def select_best_features(not_fitted_X, not_fitted_y, num_of_features):\n",
-    "    sc = SelectKBest(score_func=mutual_info_regression, k=num_of_features)\n",
-    "    sc.fit(not_fitted_X, not_fitted_y)\n",
-    "    return sc\n",
     "\n",
-    "def plot_selection_scores(sc, num_of_features):\n",
-    "    scores = dict(zip(sc.feature_names_in_, sc.scores_))\n",
+    "def plot_feature_importance(sc, num_of_features):\n",
+    "    if isinstance(sc, RFE):\n",
+    "        scores = dict(zip(sc.feature_names_in_, sc.ranking_))\n",
+    "    else:\n",
+    "        scores = dict(zip(sc.feature_names_in_, sc.scores_))\n",
     "    scores = sorted(scores.items(), key=lambda x: x[1], reverse=True)[:num_of_features]\n",
     "    scores_df = pd.DataFrame(scores, columns=['Feature', 'Score'])\n",
     "    \n",
@@ -422,11 +420,17 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 5\n",
-    "selector = select_best_features(X, y, k)\n",
+    "k = 10\n",
+    "selector = RFE(\n",
+    "    estimator=RandomForestRegressor(\n",
+    "        n_estimators=700, max_depth=5, random_state=42, n_jobs=-1, oob_score=True\n",
+    "    ),\n",
+    "    n_features_to_select=k,\n",
+    ")\n",
+    "selector.fit(X, y)\n",
     "X, test = selector.transform(X), selector.transform(test)\n",
     "\n",
-    "plot_selection_scores(selector, k)"
+    "plot_feature_importance(selector, k)"
    ],
    "metadata": {
     "collapsed": false
@@ -683,27 +687,28 @@
     "            nn.Linear(X_train_tensor.shape[1], 102),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(102, 64),\n",
+    "            nn.Linear(102, 145),\n",
     "            nn.ReLU(),\n",
-    "            nn.Dropout(p=0.1),\n",
-    "            nn.Linear(64, 1),\n",
+    "            nn.Linear(145, 45),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(45, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
     "        return self.layers(x)\n",
     "    \n",
-    "def RMSELoss(y_true, y_pred):\n",
+    "def rmse_loss(y_true, y_pred):\n",
     "    return torch.sqrt(torch.mean((y_true - y_pred) ** 2))\n",
     "\n",
     "\n",
     "model = Net().to(device=device)\n",
-    "criterion = RMSELoss\n",
+    "criterion = rmse_loss\n",
     "optimizer = optim.Adam(\n",
     "    model.parameters(), \n",
-    "    lr=1e-3, \n",
+    "    lr=0.005, \n",
     "    betas=(0.9, 0.999), \n",
-    "    eps=1e-08, \n",
-    "    weight_decay=1e-6,\n",
+    "    eps=1e-8, \n",
+    "    weight_decay=1e-4, \n",
     "    amsgrad=False, \n",
     "    fused=True\n",
     ")"
@@ -733,8 +738,8 @@
     "\n",
     "model.train()\n",
     "\n",
-    "batch_size = 16\n",
-    "num_epochs = 100\n",
+    "batch_size = 64\n",
+    "num_epochs = 150\n",
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
     "dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
@@ -744,14 +749,14 @@
     "    epoch_loss = 0\n",
     "    for batch_idx, batch in enumerate(dataset):\n",
     "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
-    "        pred = model(inputs)\n",
+    "        batch_pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
-    "        loss = criterion(targets, pred.squeeze())\n",
+    "        loss = criterion(targets, batch_pred.squeeze())\n",
     "        epoch_loss += loss.item()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "    epoch_losses[epoch].update({'rmse': epoch_loss / len(dataset)})\n",
-    "    print(f'Epoch [{epoch + 1}/{num_epochs}] RMSE: {epoch_loss / len(dataset):.4f}')"
+    "    print(f'Epoch: [{epoch + 1}/{num_epochs}] RMSE: {epoch_loss / len(dataset):.4f}')"
    ],
    "metadata": {
     "collapsed": false
