--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -289,9 +289,10 @@
     "    return dataframe\n",
     "\n",
     "\n",
-    "imputers = [KNNImputer(n_neighbors=5, weights='distance') for _ in range(len(starts_with))]\n",
+    "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
-    "data, test = fill_based_on(data), fill_based_on(test)"
+    "data, test = fill_based_on(data), fill_based_on(test)\n",
+    "ver = dict(zip(['sulphurdioxide_so2_column_number_density', 'carbonmonoxide_co_column_number_density', 'nitrogendioxide_no2_column_number_density', 'nitrogendioxide_stratospheric_no2_column_number_density'], [(-0.001 / data['sulphurdioxide_so2_column_number_density'].std(), 4), (2.25, 6), (1, 10), (19.5, 26)]))"
    ],
    "metadata": {
     "collapsed": false
@@ -329,10 +330,13 @@
     "            for j, column in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, cols)\n",
     "                data[column].plot(kind='box', ax=ax[x_cord][y_cord], fontsize=15)\n",
+    "                if column in ver.keys():\n",
+    "                    ax[x_cord][y_cord].axhline(y=ver.get(column)[1] * data[column].std(), color='red')\n",
+    "                    ax[x_cord][y_cord].axhline(y=ver.get(column)[0] * data[column].std(), color='green')\n",
     "            plt.show()\n",
     "\n",
     "\n",
-    "plot_boxplots()"
+    "# plot_boxplots()"
    ],
    "metadata": {
     "collapsed": false
@@ -357,11 +361,10 @@
     "from scipy.stats import zscore\n",
     "\n",
     "def del_outliers(dataframe):\n",
-    "    vertical_columns = ['sulphurdioxide_so2_column_number_density', 'carbonmonoxide_co_column_number_density', 'nitrogendioxide_no2_column_number_density', 'nitrogendioxide_stratospheric_no2_column_number_density']\n",
-    "    for index, column in enumerate(vertical_columns):\n",
+    "    for column, zscore_range in ver.items():\n",
     "        vec, indexes = zscore(dataframe[column]), []\n",
     "        for j in range(len(vec)):\n",
-    "            if -6 <= vec[j] >= 6:\n",
+    "            if zscore_range[0] <= vec[j] >= zscore_range[1]:\n",
     "                indexes.append(j)\n",
     "        dataframe.drop(index=indexes, inplace=True)\n",
     "        dataframe.reset_index(drop=True, inplace=True)\n",
@@ -402,12 +405,11 @@
   {
    "cell_type": "code",
    "source": [
-    "from sklearn.feature_selection import SelectKBest, RFE, mutual_info_regression, f_regression\n",
+    "from sklearn.feature_selection import SelectKBest, RFECV, RFE, mutual_info_regression, f_regression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "\n",
     "def plot_feature_importance(sc, num_of_features):\n",
-    "    if isinstance(sc, RFE):\n",
+    "    if isinstance(sc, RFECV) or isinstance(sc, RFE):\n",
     "        scores = dict(zip(sc.feature_names_in_, sc.ranking_))\n",
     "    else:\n",
     "        scores = dict(zip(sc.feature_names_in_, sc.scores_))\n",
@@ -420,13 +422,31 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 10\n",
-    "selector = RFE(\n",
+    "k = 25\n",
+    "selector = RFECV(\n",
     "    estimator=RandomForestRegressor(\n",
-    "        n_estimators=700, max_depth=5, random_state=42, n_jobs=-1, oob_score=True\n",
+    "        n_estimators=700, \n",
+    "        max_depth=7, \n",
+    "        random_state=4, \n",
+    "        n_jobs=-1, \n",
+    "        oob_score=True,\n",
+    "        warm_start=True,\n",
     "    ),\n",
-    "    n_features_to_select=k,\n",
+    "    min_features_to_select=k, \n",
+    "    cv=10, \n",
+    "    scoring='neg_root_mean_squared_error',\n",
     ")\n",
+    "# selector = RFE(\n",
+    "#     estimator=RandomForestRegressor(\n",
+    "#         n_estimators=700, \n",
+    "#         max_depth=7, \n",
+    "#         random_state=4, \n",
+    "#         n_jobs=-1, \n",
+    "#         oob_score=True,\n",
+    "#         warm_start=True\n",
+    "#     ),\n",
+    "#     n_features_to_select=k,\n",
+    "# )\n",
     "selector.fit(X, y)\n",
     "X, test = selector.transform(X), selector.transform(test)\n",
     "\n",
@@ -507,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=4)",
+   "source": "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=4)",
    "metadata": {
     "collapsed": false
    },
@@ -684,11 +704,12 @@
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
-    "            nn.Linear(X_train_tensor.shape[1], 102),\n",
+    "            nn.Linear(X_train_tensor.shape[1], 101),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(102, 145),\n",
+    "            nn.Linear(101, 145),\n",
     "            nn.ReLU(),\n",
+    "            nn.Dropout(p=0.2),\n",
     "            nn.Linear(145, 45),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(45, 1),\n",
@@ -705,11 +726,11 @@
     "criterion = rmse_loss\n",
     "optimizer = optim.Adam(\n",
     "    model.parameters(), \n",
-    "    lr=0.005, \n",
+    "    lr=0.001, \n",
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-8, \n",
     "    weight_decay=1e-4, \n",
-    "    amsgrad=False, \n",
+    "    amsgrad=True, \n",
     "    fused=True\n",
     ")"
    ],
@@ -738,7 +759,7 @@
     "\n",
     "model.train()\n",
     "\n",
-    "batch_size = 64\n",
+    "batch_size = 128\n",
     "num_epochs = 150\n",
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
