--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -213,7 +213,7 @@
    "cell_type": "code",
    "source": [
     "def correlation():\n",
-    "    for index, column in enumerate(starts_with):\n",
+    "    for i, column in enumerate(starts_with):\n",
     "        selected_columns = [col for col in data.columns if col.startswith(column) or col == 'pm2_5']\n",
     "        if len(selected_columns) > 1:\n",
     "            fig, ax = plt.subplots(figsize=(10, 10))\n",
@@ -282,7 +282,7 @@
     "\n",
     "def prepare_dataframe(dataframe):  # usuwamy kolumny o dużej liczbie wartości NaN\n",
     "    to_drop = []\n",
-    "    for index, el in enumerate(dataframe.columns):\n",
+    "    for i, el in enumerate(dataframe.columns):\n",
     "        if dataframe[el].isna().sum() / len(dataframe) >= 0.9:\n",
     "            to_drop.append(el)\n",
     "    dataframe.drop(to_drop, axis=1, inplace=True)\n",
@@ -292,7 +292,8 @@
     "imputers = [KNNImputer(n_neighbors=15, weights='distance') for _ in range(len(starts_with))]\n",
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)\n",
-    "ver = dict(zip(['sulphurdioxide_so2_column_number_density', 'carbonmonoxide_co_column_number_density', 'nitrogendioxide_no2_column_number_density', 'nitrogendioxide_stratospheric_no2_column_number_density'], [(-0.001 / data['sulphurdioxide_so2_column_number_density'].std(), 4), (2.25, 6), (1, 10), (19.5, 26)]))"
+    "vertical_columns = [col for col in data.columns if 'number_density' in col]\n",
+    "ver = dict(zip(vertical_columns, [(-1.5, 4), (5, 10), (2.5, 6.5), (1, 5), (1, 5), (22, 26), (3, 7), (-1, 4), (3, 9), (25, 29)]))"
    ],
    "metadata": {
     "collapsed": false
@@ -317,7 +318,7 @@
     "from sympy import divisors\n",
     "\n",
     "def plot_boxplots():\n",
-    "    for index, column_group in enumerate(starts_with):\n",
+    "    for i, column_group in enumerate(starts_with):\n",
     "        similar_columns = [col for col in data.columns if col.startswith(column_group)]\n",
     "        if len(similar_columns) > 1:\n",
     "            divs = divisors(len(similar_columns))\n",
@@ -329,14 +330,15 @@
     "            fig.suptitle(column_group, fontsize=25)\n",
     "            for j, column in enumerate(similar_columns):\n",
     "                x_cord, y_cord = divmod(j, cols)\n",
-    "                data[column].plot(kind='box', ax=ax[x_cord][y_cord], fontsize=15)\n",
+    "                data[column].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
     "                if column in ver.keys():\n",
-    "                    ax[x_cord][y_cord].axhline(y=ver.get(column)[1] * data[column].std(), color='red')\n",
-    "                    ax[x_cord][y_cord].axhline(y=ver.get(column)[0] * data[column].std(), color='green')\n",
+    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * data[column].std(), color='red', label='up-limit')\n",
+    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[0] * data[column].std(), color='green', label='down-limit')\n",
+    "                ax[x_cord, y_cord].legend(loc='best')\n",
     "            plt.show()\n",
     "\n",
     "\n",
-    "# plot_boxplots()"
+    "plot_boxplots()"
    ],
    "metadata": {
     "collapsed": false
@@ -360,12 +362,16 @@
    "source": [
     "from scipy.stats import zscore\n",
     "\n",
-    "def del_outliers(dataframe):\n",
+    "def del_outliers(dataframe, ignore_down_range=True):\n",
     "    for column, zscore_range in ver.items():\n",
     "        vec, indexes = zscore(dataframe[column]), []\n",
     "        for j in range(len(vec)):\n",
-    "            if zscore_range[0] <= vec[j] >= zscore_range[1]:\n",
-    "                indexes.append(j)\n",
+    "            if ignore_down_range:\n",
+    "                if vec[j] >= zscore_range[1]:\n",
+    "                    indexes.append(j)\n",
+    "            else:\n",
+    "                if zscore_range[0] <= vec[j] >= zscore_range[1]:\n",
+    "                    indexes.append(j)\n",
     "        dataframe.drop(index=indexes, inplace=True)\n",
     "        dataframe.reset_index(drop=True, inplace=True)\n",
     "    return dataframe\n",
@@ -422,7 +428,7 @@
     "\n",
     "\n",
     "X, y = data.drop(['pm2_5'], axis=1), data['pm2_5']\n",
-    "k = 25\n",
+    "k = 20\n",
     "selector = RFECV(\n",
     "    estimator=RandomForestRegressor(\n",
     "        n_estimators=700, \n",
@@ -435,6 +441,7 @@
     "    min_features_to_select=k, \n",
     "    cv=10, \n",
     "    scoring='neg_root_mean_squared_error',\n",
+    "    n_jobs=-1\n",
     ")\n",
     "# selector = RFE(\n",
     "#     estimator=RandomForestRegressor(\n",
@@ -705,14 +712,14 @@
     "        super(Net, self).__init__()\n",
     "        self.layers = nn.Sequential(\n",
     "            nn.Linear(X_train_tensor.shape[1], 101),\n",
-    "            nn.ReLU(),\n",
+    "            nn.ELU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(101, 145),\n",
-    "            nn.ReLU(),\n",
+    "            nn.Linear(101, 245),\n",
+    "            nn.ELU(),\n",
     "            nn.Dropout(p=0.2),\n",
-    "            nn.Linear(145, 45),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(45, 1),\n",
+    "            nn.Linear(245, 65),\n",
+    "            nn.ELU(),\n",
+    "            nn.Linear(65, 1),\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -730,7 +737,7 @@
     "    betas=(0.9, 0.999), \n",
     "    eps=1e-8, \n",
     "    weight_decay=1e-4, \n",
-    "    amsgrad=True, \n",
+    "    amsgrad=False, \n",
     "    fused=True\n",
     ")"
    ],
@@ -759,25 +766,27 @@
     "\n",
     "model.train()\n",
     "\n",
-    "batch_size = 128\n",
-    "num_epochs = 150\n",
+    "batch_size = 32\n",
+    "epochs = 150\n",
     "\n",
     "final_train_tensor = torch.concat((X_train_tensor, y_train_tensor.unsqueeze(dim=1)), dim=1)\n",
-    "dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
-    "epoch_losses = [{'epoch': i, 'rmse': 0} for i in range(num_epochs)]\n",
+    "losses_for_each_batch = pd.DataFrame()\n",
     "\n",
-    "for epoch in range(num_epochs):\n",
-    "    epoch_loss = 0\n",
+    "for epoch in range(epochs):\n",
+    "    batch_rmse = np.array([])\n",
+    "    dataset = DataLoader(final_train_tensor, batch_size=batch_size, shuffle=True)\n",
     "    for batch_idx, batch in enumerate(dataset):\n",
     "        inputs, targets = batch[:, :-1], batch[:, -1]\n",
     "        batch_pred = model(inputs)\n",
     "        optimizer.zero_grad()\n",
     "        loss = criterion(targets, batch_pred.squeeze())\n",
-    "        epoch_loss += loss.item()\n",
+    "        batch_rmse = np.append(batch_rmse, loss.item())\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    epoch_losses[epoch].update({'rmse': epoch_loss / len(dataset)})\n",
-    "    print(f'Epoch: [{epoch + 1}/{num_epochs}] RMSE: {epoch_loss / len(dataset):.4f}')"
+    "    if epoch == 0:\n",
+    "        losses_for_each_batch = pd.DataFrame({epoch: batch_rmse})\n",
+    "    else:\n",
+    "        losses_for_each_batch = pd.concat([losses_for_each_batch, pd.DataFrame({epoch: batch_rmse})], axis=1)"
    ],
    "metadata": {
     "collapsed": false
@@ -789,14 +798,30 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Jakość sieci neuronowej",
-   "id": "af467d14c745b2a4"
+   "source": "### Dane z każdej epoki",
+   "id": "1aef17f50ac4745"
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "sns.lineplot(data=pd.DataFrame(epoch_losses), x='epoch', y='rmse')",
-   "id": "a4dc6621d5974fe5",
+   "source": [
+    "def plot_loss(dataframe):\n",
+    "    df = dataframe.describe().drop(index=['count', 'std', '25%', '75%']).T\n",
+    "    fig, ax = plt.subplots(nrows=2, ncols=2, figsize=(10, 8))\n",
+    "    for i, column in enumerate(df.columns):\n",
+    "        x_cord, y_cord = divmod(i, 2)\n",
+    "        df[column].plot(kind='line', ax=ax[x_cord, y_cord])\n",
+    "        ax[x_cord, y_cord].set_title(column)\n",
+    "        if y_cord == 0:\n",
+    "            ax[x_cord, y_cord].set_ylabel('RMSE')\n",
+    "        if x_cord == 1:\n",
+    "            ax[x_cord, y_cord].set_xlabel('Epoch')\n",
+    "        ax[x_cord, y_cord].grid(True)\n",
+    "    plt.show()\n",
+    "    \n",
+    "plot_loss(losses_for_each_batch)"
+   ],
+   "id": "21d227eb4d3d2fa7",
    "outputs": [],
    "execution_count": null
   },
