zmiany w usuwaniu outlierow

--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -293,7 +293,7 @@
     "data, test = prepare_dataframe(data), prepare_dataframe(test)\n",
     "data, test = fill_based_on(data), fill_based_on(test)\n",
     "vertical_columns = [col for col in data.columns if 'number_density' in col]\n",
-    "ver = dict(zip(vertical_columns, [(-1.5, 4), (5, 10), (2.5, 6.5), (1, 5), (1, 5), (22, 26), (3, 7), (-1, 4), (3, 9), (25, 29)]))"
+    "ver = dict(zip(vertical_columns, [(abs(data[column].quantile(0.1)) * -1.5 / data[column].std(), abs(data[column].quantile(0.9)) * 1.5 / data[column].std()) for column in vertical_columns]))"
    ],
    "metadata": {
     "collapsed": false
@@ -332,8 +332,8 @@
     "                x_cord, y_cord = divmod(j, cols)\n",
     "                data[column].plot(kind='box', ax=ax[x_cord, y_cord], fontsize=15)\n",
     "                if column in ver.keys():\n",
-    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * data[column].std(), color='red', label='up-limit')\n",
     "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[0] * data[column].std(), color='green', label='down-limit')\n",
+    "                    ax[x_cord, y_cord].axhline(y=ver.get(column)[1] * data[column].std(), color='red', label='up-limit')\n",
     "                ax[x_cord, y_cord].legend(loc='best')\n",
     "            plt.show()\n",
     "\n",
