--- a/AirQuality.ipynb
+++ b/AirQuality.ipynb
@@ -586,8 +586,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "def give_the_best(clf):\n",
-    "    gs = GridSearchCV(clf, params, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=5)\n",
+    "def give_the_best(clf, param_grid):\n",
+    "    gs = GridSearchCV(clf, param_grid, scoring='neg_root_mean_squared_error', n_jobs=-1, cv=5)\n",
     "    gs.fit(X_train, y_train)\n",
     "    return gs.best_estimator_\n",
     "\n",
@@ -839,8 +839,7 @@
     "model.eval()\n",
     "\n",
     "with torch.no_grad():\n",
-    "    pred = model(X_test_tensor)\n",
-    "    loss = criterion(y_test_tensor, pred.squeeze())\n",
+    "    loss = criterion(y_test_tensor, model(X_test_tensor).squeeze())\n",
     "    print(f'RMSE: {loss.item():.4f}')"
    ],
    "metadata": {
@@ -884,8 +883,7 @@
    "cell_type": "code",
    "source": [
     "with torch.no_grad():\n",
-    "    final_pred = model(test_tensor)\n",
-    "    save_to_csv(final_pred.squeeze().numpy(force=True), 'nn.csv')"
+    "    save_to_csv(model(test_tensor).squeeze().numpy(force=True), 'nn.csv')"
    ],
    "metadata": {
     "collapsed": false
